--- a/index.html
+++ b/index.html
@@ -36,12 +36,39 @@
             <div class="about-col-2">
                 <h1 class="sub-title">About Me</h1>
                 <p>Dynamic Software Engineer with two years at Societe Generale, experienced in developing REST APIs and backend skills using Java, Spring Boot, Hibernate, and various database systems to build production-ready applications. Experienced in designing, developing, testing and deploying various systems, with expertise in multithreaded programming and object-oriented design. Proficient in Kubernetes, Docker, and Jenkins for seamless deployment and management. Skilled in end-to-end implementation, including requirement gathering, and module development. As the primary developer, led project lifecycles, ensuring successful delivery. Known for innovative problemsolving and collaboration, excelling in fast-paced environments, delivering impactful software solutions that solve real-world problems and add value to stakeholders.</p>
+                <!--education and experience - mobile view-->
+                <div class="tab-titles">
+                    <p class="tab-links active-link" onclick="opentab('experience')">Experience</p>
+                    <p class="tab-links" onclick="opentab('education')">Education</p>
+                </div>
+                <div class="tab-contents active-tab" id="experience">
+                    <ul>
+                        <li>Software Engineer <span>&emsp;&emsp;&emsp; Aug 2022 - Present</span><br><p><strong>Societe Generale, Chennai </strong>
+                            <ol>
+                                <li>Enhanced SpringBoot application for client data processing.<br></li>
+                                <li>Contributed to Swagger API with new endpoints.<br></li>
+                                <li>Managed SpringBoot batch processing application.<br></li>
+                                <li>Developed SAP Business Objects attributes by improving client satisfaction.<br></li>
+                                <li>Implemented monitoring for daily batch processes.<br></li>
+                                <li>Revamped code to improve performance.<br></li>
+                                <li>Led backend development and conducted code reviews as primary developer.</li>
+                            </ol>
+                    </p></li>
+                    </ul>
+                </div>
+                <div class="tab-contents" id="education">
+                    <ul>
+                        <li>B.Tech in Information Technology<br><p><strong>Anna University, MIT Campus</strong> | 2022<br>CGPA: 8.36/10</p></li>
+                        <li>Higher Secondary Certificate <br><p><strong>TMHNU Matric Hr Sec School</strong> | 2018 <br>Percentage: 97.1</p></li>
+                        <li>Secondary School Leaving Certificate <br><p><strong>SVVM Matric Hr Sec School</strong> | 2016<br>Percentage: 98.2</p></li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
   </div>
 
-  <!--timeline-->
+  <!--timeline large screen-->
   <div class="timeline">
         <div class="middle-line"></div>
 
@@ -168,7 +195,7 @@
                     <h3>Protfolio Website</h3>
                     <p>Created a responsive personal portfolio website using HTML and CSS to showcase professional experience, skills, projects, and achievements. Ensured optimal user experience with clean design, effective layout, and seamless navigation.
                     </p>
-                    <a href="file:///F:/Project/MY_WEBSITE/index.html"><i class="fas fa-external-link-alt"></i></a>
+                    <a href="https://yuvashreenarayanan3.github.io/yuvashree.github.io/"><i class="fas fa-external-link-alt"></i></a>
                 </div>
             </div>
             <div class="work">
@@ -176,7 +203,7 @@
                 <div class="layer">
                     <h3>Real-time Microoservice Project</h3>
                     <p>The Real-Time Microservice Project is an e-commerce platform developed with Java, SpringBoot, Docker, and Kubernetes. It supports 10,000 concurrent users, processes over 1,000 orders per minute, and achieves 90% uptime, leveraging Kafka and Resilience4J to reduce failures by 80%. Secured with OAuth2, the platform maintains an API response time under 200ms.</p>
-                    <a href="#"><i class="fas fa-external-link-alt"></i></a>
+                    <a href="https://github.com/yuvashreenarayanan3/Real-time-Microservice-project"><i class="fas fa-external-link-alt"></i></a>
                 </div>
             </div>
             <div class="work">
@@ -184,7 +211,7 @@
                 <div class="layer">
                     <h3>Secure Online Shopping Website</h3>
                     <p>The Secure Online Shopping Website allows customers to order products and make payments via debit/credit cards. Built with PHP, HTML, CSS, JavaScript, and MySQL, it secures card details using AES encryption and reduces security vulnerabilities with anti-SQL injection measures.</p>
-                    <a href="#"><i class="fas fa-external-link-alt"></i></a>
+                    <a href="https://yuvashreenarayanan3.github.io/Secure-Online-Shopping-System/"><i class="fas fa-external-link-alt"></i></a>
                 </div>
             </div>
         </div>
