--- a/index.html
+++ b/index.html
@@ -190,15 +190,6 @@
         <h1 class="sub-title">My Projects</h1>
         <div class="work-list">
             <div class="work">
-                <img src="images/portfolio-image3.png">
-                <div class="layer">
-                    <h3>Protfolio Website</h3>
-                    <p>Created a responsive personal portfolio website using HTML and CSS to showcase professional experience, skills, projects, and achievements. Ensured optimal user experience with clean design, effective layout, and seamless navigation.
-                    </p>
-                    <a href="https://yuvashreenarayanan3.github.io/yuvashree.github.io/"><i class="fas fa-external-link-alt"></i></a>
-                </div>
-            </div>
-            <div class="work">
                 <img src="images/microservice-project2.png">
                 <div class="layer">
                     <h3>Real-time Microoservice Project</h3>
@@ -207,11 +198,20 @@
                 </div>
             </div>
             <div class="work">
-                <img src="images/secure-shopping2.png">
+                <img src="images/codeanalysis.png">
                 <div class="layer">
-                    <h3>Secure Online Shopping Website</h3>
-                    <p>The Secure Online Shopping Website allows customers to order products and make payments via debit/credit cards. Built with PHP, HTML, CSS, JavaScript, and MySQL, it secures card details using AES encryption and reduces security vulnerabilities with anti-SQL injection measures.</p>
+                    <h3>Code Review and Quality Analysis API</h3>
+                    <p>Developed a code quality analysis tool that performs scheduled analyses on project repositories, generates detailed and aggregated reports, and provides RESTful APIs for triggering analyses and retrieving results. Implemented OAuth2-based JWT authorization for secure API access and orchestrated deployment using Kubernetes, Docker, and Jenkins.</p>
                     <a href="https://yuvashreenarayanan3.github.io/Secure-Online-Shopping-System/"><i class="fas fa-external-link-alt"></i></a>
+                </div>
+            </div>
+            <div class="work">
+                <img src="images/portfolio-image3.png">
+                <div class="layer">
+                    <h3>Protfolio Website</h3>
+                    <p>Created a responsive personal portfolio website using HTML and CSS to showcase professional experience, skills, projects, and achievements. Ensured optimal user experience with clean design, effective layout, and seamless navigation.
+                    </p>
+                    <a href="https://yuvashreenarayanan3.github.io/yuvashree.github.io/"><i class="fas fa-external-link-alt"></i></a>
                 </div>
             </div>
         </div>
@@ -231,7 +231,7 @@
                     <a href="https://github.com/yuvashreenarayanan3"><i class="fa-brands fa-square-github"></i></a>
                     <a href="https://www.geeksforgeeks.org/user/yuvashreenarayanan/"><i class="fa-solid fa-file-code"></i></a>
                 </div>
-                <a href="https://drive.google.com/file/d/1d4WyQCw2EuDzNFFDjcKJj6n-3BSMKrqn/view?usp=sharing" download class="btn btn2">Downloand Resume</a>
+                <a href="https://drive.google.com/file/d/121NgmXlIMTvvJeGvt6Jt-eYvK-Az_rQv/view" download class="btn btn2">Downloand Resume</a>
             </div>
             <div class="contact-right">
                 <form name="submit-to-google-sheet">
